tests/paczka1/fuzzy1/68925253.err
Error in line 1: apQa8LGO A258 53,2
Error in line 10: z7bD63Bv8Eg A258 56,4
Error in line 28: BG3XPS6BwN S453 78,3
Error in line 30: BG3XPS6BwN A258 86,0
Error in line 34: z7bD63Bv8Eg S544 63,8
